<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LabelingActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="164dp"
        android:layout_height="192dp"
        app:srcCompat="@android:color/darker_gray"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="309dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:text="@string/btn_paper"/>


    <Button
        android:id="@+id/btn_scissor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_scissor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_paper"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <Button
        android:id="@+id/btn_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_paper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />
</androidx.constraintlayout.widget.ConstraintLayout>